sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:17: error: Unmatched closing brace '}' ignored here
}
^